@@ -73,6 +73,10 @@
    - djm@cvs.openbsd.org 2009/01/22 10:09:16
      [auth-options.c]
      another chunk of a2port() diff that got away. wtfdjm??
+   - djm@cvs.openbsd.org 2009/01/23 07:58:11
+     [myproposal.h]
+     prefer CTR modes and revised arcfour (i.e w/ discard) modes to CBC
+     modes; ok markus@
 
 20090107
  - (djm) [uidswap.c] bz#1412: Support >16 supplemental groups in OS X.
@@ -5082,5 +5086,5 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.5176 2009/01/28 05:33:01 djm Exp $
+$Id: ChangeLog,v 1.5177 2009/01/28 05:33:31 djm Exp $
 
